# youtube.py2

./: .gitignore  MANIFEST.in  README.md  REFERENCE.md  main.py  make_zip.bat  pyproject.toml  release.py  test.py  test_import_youtube_py2.py  test_license_paid_feature.py
src/youtube_py2/: __init__.py  binary_hashes.json  youtube_py2.cp310-win_amd64.pyd
youtube_py2/: __init__.py  _bootstrap.py.bak  activation_info.json  captions.py  channel.py  export.py  license.py  live.py  logging.py  pagination.py  video.py
youtube_py2_bak/: __init__.py  analytics.py  async_api.py  auth.py  cli.py  comment.py  localization.py  membership.py  playlist.py  pubsub.py
